@@ -72,13 +72,14 @@ firefox-trunk (8.0~a1~hg20110714r72763+nobinonly-0ubuntu1) UNRELEASED; urgency=l
     - update debian/firefox-dev.links.in 
     - update debian/mozconfig.in
     - update debian/pkgconfig/libxul.pc.in
+    - update debian/control.in
     - update debian/rules
 
   [ Brian Murray <brian@ubuntu.com> ]
   * Fix LP: #758111 - update ubuntulinux.org bookmark - thanks to Jonathan
     Rothwell for the patch
 
- -- Chris Coulson <chris.coulson@canonical.com>  Fri, 15 Jul 2011 13:16:44 +0100
+ -- Chris Coulson <chris.coulson@canonical.com>  Fri, 15 Jul 2011 14:08:52 +0100
 
 firefox-trunk (7.0~a1~hg20110704r72289+nobinonly-0ubuntu1) oneiric; urgency=low
 
